--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+## see https://docs.kicad.org/7.0/en/kicad/kicad.html re file names/uses
+
 *-backups/
 *.kicad_pcb-before
 *auto_saved*
@@ -9,4 +11,5 @@ DRC.rpt
 *-cache.lib
 *-rescue.lib
 
+*.kicad_prl
 fp-info-cache
